# scromfyUI-Shaders

./: .gitignore  Agents.md  LICENSE  README.md  README_WHYINREPO.md  REFERENCE_ANALYSIS.md  __init__.py  pyproject.toml  requirements.txt
api_keys/: README.md
docs/: NODE_SPECS.md  PROGRESS.md
how_to/: creative_ai_workflow.md  creative_glsl_basic.md  creative_p5_baking.md
nodes/: bloom_node.py  create_normal_node.py  creative_ai_config_node.py  creative_channels_node.py  creative_glsl_loader_node.py  creative_p5_loader_node.py  creative_p5_render_node.py  creative_settings_node.py  creative_shader_render_node.py  creative_uniforms_node.py  examine_context_node.py  filter_range_node.py  glsl_editor_node.py  glsl_editor_pro_node.py  gradient_circular_node.py  gradient_linear_node.py  grayscale_node.py  hsv_adjust_node.py  image_uniform_node.py  minmax_node.py  preview_node.py  shader_loader_node.py  shader_runner_node.py  sobel_node.py  transform_node.py  uniform_color_node.py  uniform_float_node.py  uniform_int_node.py  uniform_vec2_node.py  uniform_vec2pos_node.py  uniform_vec3_node.py  uniform_vec3pos_node.py  uniform_vec4_node.py  uniform_vec4color_node.py  vec2_split_node.py  vec3_split_node.py  vec4_split_node.py
shaders/: create_normal.frag  filter_bloom.frag  filter_sobel.frag  gradient_circular.frag  gradient_linear.frag  red_gradient.frag  transform.frag
web/: README.md  ai_assistant.js  creative_nodes.js  creative_utils.js  glsl_runner.js  glsl_types.js  lib_const.js  lib_convert.js  lib_shading.js  lib_vector.js  monaco_setup.js  p5_runner.js  (+2 more)
(+11 files in other folders)
